<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/complicationUnlockCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/complicationUnlockTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_complication_unlock_card"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toTopOf="@id/complicationUnlockDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/complicationUnlockDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_complication_unlock_card"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintBottom_toTopOf="@id/complicationUnlockPurchase"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/complicationUnlockTitle" />

                <TextView
                    android:id="@+id/complicationUnlockPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/complicationUnlockDescription"
                    tools:text="$1.99 (+tax)" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/complicationUnlockPurchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/complicationUnlockDescription"
                    tools:enabled="true"
                    tools:text="Purchase" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/installWatchAppCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_install_watch_card"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toTopOf="@id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description_install_watch_card"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintBottom_toTopOf="@id/installWatchAppScreenshot1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView" />


                <ImageView
                    android:id="@+id/installWatchAppScreenshot1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/screenshot1_install_watch_card"
                    android:src="@mipmap/install_wear_app_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/installWatchAppScreenshot2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <ImageView
                    android:id="@+id/installWatchAppScreenshot2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/screenshot2_install_watch_card"
                    android:src="@mipmap/install_wear_app_2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/installWatchAppScreenshot1"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp">

            <TextView
                android:id="@+id/changelogView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/changelog" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
